Applies fixes as suggested by IntelliJ and sonarlint.