@@ -54,7 +54,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 /**
  * Base class for all controllers which operate on entities.
@@ -296,7 +295,7 @@ public class BizController extends BasicController {
                                       .filter(property -> shouldAutoload(webContext, property))
                                       .map(Property::getName)
                                       .map(Mapping::named)
-                                      .collect(Collectors.toList());
+                                      .toList();
 
         load(webContext, entity, columns);
     }
@@ -329,8 +328,8 @@ public class BizController extends BasicController {
     }
 
     private boolean tryLoadProperty(WebContext webContext, BaseEntity<?> entity, Property property) {
-        if (property instanceof ComplexLoadProperty) {
-            return ((ComplexLoadProperty) property).loadFromWebContext(webContext, entity);
+        if (property instanceof ComplexLoadProperty complexLoadProperty) {
+            return complexLoadProperty.loadFromWebContext(webContext, entity);
         } else {
             String propertyName = property.getName();
             if (!webContext.hasParameter(propertyName) && !webContext.hasParameter(propertyName
@@ -362,10 +361,10 @@ public class BizController extends BasicController {
     }
 
     private void ensureTenantMatch(BaseEntity<?> entity, Property property) {
-        if ((entity instanceof TenantAware) && property instanceof BaseEntityRefProperty) {
+        if ((entity instanceof TenantAware tenantAwareEntity) && property instanceof BaseEntityRefProperty) {
             Object loadedEntity = property.getValue(entity);
-            if (loadedEntity instanceof TenantAware) {
-                ((TenantAware) entity).assertSameTenant(property::getLabel, (TenantAware) loadedEntity);
+            if (loadedEntity instanceof TenantAware tenantAwareLoadedEntity) {
+                tenantAwareEntity.assertSameTenant(property::getLabel, tenantAwareLoadedEntity);
             }
         }
     }
@@ -432,8 +431,8 @@ public class BizController extends BasicController {
     public void deleteEntity(WebContext webContext, Optional<? extends BaseEntity<?>> optionalEntity) {
         if (webContext.isSafePOST()) {
             optionalEntity.ifPresent(entity -> {
-                if (entity instanceof TenantAware) {
-                    assertTenant((TenantAware) entity);
+                if (entity instanceof TenantAware tenantAware) {
+                    assertTenant(tenantAware);
                 }
                 if (entity.getDescriptor().isComplexDelete() && processes != null) {
                     deleteComplexEntity(entity);
@@ -635,8 +634,8 @@ public class BizController extends BasicController {
      * @param exception the exception to handle
      */
     protected void handle(Exception exception) {
-        if (exception.getCause() instanceof InvalidFieldException) {
-            UserContext.get().addFieldError(((InvalidFieldException) exception.getCause()).getField(), "");
+        if (exception.getCause() instanceof InvalidFieldException invalidFieldException) {
+            UserContext.get().addFieldError(invalidFieldException.getField(), "");
         }
 
         UserContext.handle(exception);
